# sentinel-fabric-labs

./: .dockerignore  Cargo.toml  DEPLOYMENT_SUMMARY.md  PLAN.md  README.md  fix_bench.py  fix_breaker.py  fix_sentinel.py
bench/: Cargo.toml  S3_QUICKSTART.md  S3_UPLOAD_GUIDE.md  load.sh
bench/baselines/: local_chat.json  local_health.json
bench/results/: cand.json  chat-20260228-141724.json  chat-20260228-141755.json  chat-20260228-181927.json  chat-20260228-182038.json  chat-20260228-184538.json  health-20260220-045815.json  health-20260220-045918.json  health-20260220-045936.json
bench/src/: main.rs
containers/: BENCH_BUILD_FIXES.md  DOCKER_FIXES.md  README_SUMMARY.md  VALIDATION.md
containers/bench/: Dockerfile  README.md  docker-compose.yaml
containers/sentinel/: Dockerfile  README.md  docker-compose.yaml
docs/: Agnt-1  INTERVIEW-STUDY-GUIDE.docx  backend_lane.md  bench.md  epic-1.md  epic-2-updated.md  epic-2.md  epic-3.md  epic2_s21_cfs_cliff.md  gpu_operator.md  infra.md  test_plan.md
helios/: Cargo.toml
infra/: BUILD_PUSH_GUIDE.md  GPU_OPERATOR_QUICKSTART.md  README.md  build_push.sh  env.example  gpu_operator_install.sh  gpu_operator_uninstall.sh
k8s/: .gitignore  KUBECTL_CONFIG.md  QUICKSTART.md  README.md
labs/gpu_exporter/: Cargo.toml
labs/gpu_exporter/src/: lib.rs  main.rs
netlab/: Cargo.toml
running-logs/: Epic-0
scripts/: epic2_run_all.sh  epic2_s21_perf_stat.sh  epic2_s21_run.sh  epic2_test.sh  epic3_run_all.sh  epic3_test.sh  flamegraph.sh  perf_stat.sh  regress.py  run_cell.sh  run_local.sh  sweep_chat.sh
sentinel/: Cargo.toml
sentinel/src/: admission.rs  breaker.rs  main.rs  observability.rs
(+61 files in other folders)
