[package]
name = "gpu_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
prometheus = "0.13"
serde_json = "1.0"
hdrhistogram = "7.5"
num_cpus = "1.17"